--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-streamlit==1.26.0
-numpy<1.26
-scikit-learn==1.2.2
-sentence-transformers==2.2.2
-torch>=1.12.1
+streamlit==1.27.0
+numpy==1.26.4
 pandas==2.1.1
-pillow==9.5.0
-cython==0.29.36
-setuptools==68.0.0
+setuptools>=70.0.0
 wheel
