--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-streamlit==1.27.0
+streamlit==1.28.0
 numpy==1.26.4
 pandas==2.1.1
+scikit-learn==1.3.2
+torch==2.3.1
+sentence-transformers==2.2.2
+transformers==4.40.1
+huggingface_hub==0.24.5
+tqdm==4.66.4
+scipy==1.12.0
 setuptools>=70.0.0
 wheel
